# cross-web

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  justfile  noxfile.py  pyproject.toml
.github/workflows/: pr.yml  release.yml  test.yml
src/cross_web/: __init__.py  _apply_cookie.py  protocols.py  response.py
src/cross_web/request/: __init__.py  _aiohttp.py  _base.py  _chalice.py  _django.py  _flask.py  _litestar.py  _quart.py  _sanic.py  _starlette.py  _testing.py
src/cross_web/testing/: __init__.py  _django_settings.py
src/cross_web/testing/clients/: __init__.py  aiohttp.py  base.py  chalice.py  django.py  flask.py  litestar.py  quart.py  sanic.py  starlette.py
src/lia/: __init__.py  exceptions.py  json_utils.py  protocols.py  request_utils.py  response.py  temporal_response.py  utils.py
src/lia/request/: __init__.py  _aiohttp.py  _base.py  _chalice.py  _django.py  _flask.py  _litestar.py  _quart.py  _sanic.py
tests/: test_exceptions.py  test_init_coverage.py  test_json_utils.py  test_request_utils.py  test_type_checking_imports.py
tests/request/: conftest.py  django_urls.py  test_adapters.py  test_aiohttp.py  test_async_http_request.py  test_base.py  test_base_abstract.py  test_chalice.py  test_coverage_lines.py  test_django.py  test_flask.py  test_integrations.py  test_litestar.py  test_litestar_extended.py  test_quart.py  test_sanic.py  test_sanic_coverage.py  test_starlette.py  test_starlette_extended.py  test_testing.py
tests/request/clients/: aiohttp.py  base.py  chalice.py  django.py  flask.py  litestar.py  quart.py  sanic.py  starlette.py
tests/response/: test_apply_cookie.py  test_fastapi.py  test_response.py  test_response_extended.py  test_response_to_fastapi.py
tests/testing/: __init__.py  _django_settings.py
tests/testing/clients/: __init__.py  builders.py  conftest.py  test_aiohttp.py  test_base.py  test_chalice.py  test_django.py  test_flask.py  test_http_clients.py  test_quart.py
website/: .fastapicloudignore  .gitignore  app.py  justfile  package.json  pyproject.toml  tsconfig.json  vite.config.ts
website/content/api/: cross_web.json
website/content/docs/: installation.md  introduction.md  requests.md  responses.md  testing.md
website/frontend/: app.tsx  index.html  ssr.tsx  styles.css
website/frontend/components/: Logo.tsx
website/frontend/pages/: Home.tsx
website/templates/: app.html
