[project]
name = "lia-web"
version = "0.1.0"
description = "A library for working with web frameworks"
readme = "README.md"
authors = [{ name = "Patrick Arminio", email = "patrick.arminio@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["pydantic>=2.11.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lia"]

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
    "python-multipart>=0.0.20",
    "starlette>=0.46.1",
    "inline-snapshot>=0.20.10",
    "coverage[toml]>=7.8.0",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.coverage.run]
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.autopub]
plugins = ["autopub.plugins.github", "autopub.plugins.uv"]
